welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: value pour is not a member of java.awt.Color
Color.RED pour le rouge
          ^FlowerPot:25: error: value pour is not a member of java.awt.Color
Color.ORANGE pour le orange
             ^