welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
		avance()
	flowers(Color.RED)
	setCouleurBrosse(Color.YELLOW)
	droite()
	avance(4)
	flowers(Color.CYAN)
	setCouleurBrosse(Color.YELLOW)
	
}
def flowers(c:Color) {
	for (i<- 1 to 5) {
		setCouleurBrosse(c)
		baisseBrosse()
		avance()
		recule()
		gauche()
	}
}

Color.RED pour le rouge
Color.PINK pour le rose
Color.CYAN pour le bleu clair
Color.ORANGE pour le orange
Color.GREEN pour le vert
Color.YELLOW pour le jaune